--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-charts": "^8.11.2",
+    "@mui/x-date-pickers": "^8.12.0",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
