--- a/dashboard/.env.production
+++ b/dashboard/.env.production
@@ -1,2 +1,2 @@
-# Replace with your actual Railway URL after backend deployment
-VITE_API_URL=https://your-railway-url.up.railway.app
+# Railway Backend URL
+VITE_API_URL=https://elakonvdeployment-production.up.railway.app
