--- a/server/.env.production
+++ b/server/.env.production
@@ -9,7 +9,7 @@ PORT=1337
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/yourdbname?retryWrites=true&w=majority
 
 # Frontend URL - Update this after you deploy to Vercel
-FRONTEND_URL=https://your-app.vercel.app
+FRONTEND_URL=https://elako-nv-deployment.vercel.app
 
 # Email Service (if using)
 # EMAIL_USER=your-email@gmail.com
