--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 # MongoDB Atlas Configuration
-MONGODB_URI=mongodb+srv://<db_username>:<db_password>@elakonv.q7jf9go.mongodb.net/ElakoNv
+MONGODB_URI=mongodb+srv://ElakoNvAdmin:%40Jenzon0108_@elakonv.q7jf9go.mongodb.net/ElakoNv
 DB_USERNAME=ElakoNvAdmin
 DB_PASSWORD=%40Jenzon0108_
 
 # Server Configuration
-PORT=3001
+PORT=1337
 NODE_ENV=development
