fix: resolve email service and forgot password issues
- Fix emailService.js to use environment variables properly
- Add email verification and error handling
- Fix ForgotPassword.jsx missing API_BASE_URL import
- Update .env with email configuration
- Ensure all email 'from' fields use env variables

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,11 @@ DB_PASSWORD=%40Jenzon0108_
 # Server Configuration
 PORT=1337
 NODE_ENV=development
+
+# Email Configuration
+EMAIL_USER=elakonv@gmail.com
+EMAIL_PASSWORD=clqjphzkugqlhvrw
+
+# Website URL
+WEBSITE_URL=http://localhost:3000
+SERVER_URL=http://localhost:1337
